[package]

name = "bindings"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[lib]

name = "bindings"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.27" }
pyo3-stub-gen = "0.18"
robstride = { path = "../robstride" }
tokio = { version = "1.0", features = ["full"] }
eyre = "0.6"
tracing = "0.1"
